# Max

./: .gitignore  AACDefaults.plist  AACEncoder.h  AACEncoder.m  AACEncoderTask.h  AACEncoderTask.m  AACPreferencesController.h  AACPreferencesController.m  Acknowledgments.md  Acknowledgments.rtf  AcknowledgmentsController.h  AcknowledgmentsController.m  Add to iTunes Library.scpt  AlbumArtDefaults.plist  AlbumArtPreferencesController.h  AmazonAlbumArtSheet.h  AmazonAlbumArtSheet.m  ApplicationController.h  ApplicationController.m  ApplicationControllerDefaults.plist  AudioMetadata.h  AudioMetadata.m  AudioMetadata.mm  BOOLToStringValueTransformer.h  BasicRipper.h  BitArray.h  BitArray.m  BooleanArrayValueTransformer.h  BooleanArrayValueTransformer.m  CD.icns  CDDB.c  CDDB.h  CDDB.m  CDDBDefaults.plist  CDDBException.m  CDDBMatch.h  CDDBMatchSheet.h  CDDBMatchSheet.m  CDDBProtocolValueTransformer.m  CDDBSite.h  (+249 more)
Frameworks/cddb/libcddb/: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  aclocal.m4  config.h  config.h.in  configure  configure.ac  libcddb.pc.in
Frameworks/cddb/libcddb/doc/: doxygen.conf
Frameworks/cddb/libcddb/examples/: Makefile.am  Makefile.in  cd_access.c  do_display.c  do_query.c  do_read.c  do_search.c  do_sites.c  main.c  main.h
Frameworks/cddb/libcddb/include/: Makefile.am  Makefile.in
Frameworks/cddb/libcddb/lib/: Makefile.am  Makefile.in  cddb.c  cddb_cmd.c  cddb_conn.c  cddb_disc.c  cddb_error.c  cddb_log.c  cddb_net.c  cddb_regex.c  cddb_site.c  cddb_track.c  cddb_util.c  ll.c
Frameworks/cddb/libcddb/misc/: libcddb-1.2.1.ebuild
Frameworks/cddb/libcddb/tests/: Makefile.am  Makefile.in  OVERVIEW.txt  check_cache.sh  check_charset.sh  check_discid.sh  check_parse.sh  check_server.sh  settings.sh.in
Frameworks/cuetools/cuetools/: AUTHORS  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  config.h.in  configure  configure.ac
Frameworks/cuetools/cuetools/doc/: Makefile.am  Makefile.in  cuebreakpoints.1  cueconvert.1  cueprint.1
Frameworks/cuetools/cuetools/extras/: Makefile.am  Makefile.in  cueconvert.cgi  cuetag.sh  formats.txt  index.txt
Frameworks/cuetools/cuetools/src/: Makefile.am  Makefile.in
Frameworks/discid/libdiscid/: AUTHORS  ChangeLog  Doxyfile.in  Makefile.am  Makefile.in  Makefile.msvc  README  aclocal.m4  config.h  config.h.in  configure  configure.ac  discid.def  libdiscid.pc.in
Frameworks/discid/libdiscid/examples/: Makefile.am  Makefile.in  discid.c
Frameworks/discid/libdiscid/include/: Makefile.am  Makefile.in
Frameworks/discid/libdiscid/src/: Makefile.am  Makefile.in  base64.c  base64.h  disc.c  disc_darwin.c  disc_linux.c  disc_win32.c  sha1.c  sha1.h
Frameworks/discid/libdiscid/test/: Makefile.am  Makefile.in  test_discid.c
Frameworks/lame/lame/libmp3lame/: Makefile.am  Makefile.in  VbrTag.c  VbrTag.h  bitstream.c  bitstream.h  encoder.c  encoder.h  fft.c  fft.h  gain_analysis.c  gain_analysis.h  id3tag.c  id3tag.h  l3side.h  lame-analysis.h  lame.c  lame_global_flags.h  libmp3lame_vc6.dsp  libmp3lame_vc7.vcproj  machine.h  mpglib_interface.c  newmdct.c  newmdct.h  presets.c  psymodel.c  psymodel.h  quantize.c  quantize.h  quantize_pvt.c  quantize_pvt.h  reservoir.c  reservoir.h  set_get.c  set_get.h  tables.c  tables.h  takehiro.c  util.c  util.h  (+4 more)
Frameworks/mpcdec/libmpcdec/: ChangeLog  Makefile.in  autogen.sh  configure  configure.ac
Frameworks/mpcdec/libmpcdec/docs/: Doxyfile
Frameworks/mpcdec/libmpcdec/include/: Makefile.am  Makefile.in  config.h  config.h.in
Frameworks/mpcdec/libmpcdec/src/: Makefile.am  Makefile.in  mpc_decoder.c  streaminfo.c
Frameworks/mpcdec/libmpcdec/win32/: libmpcdec.dsp  libmpcdec.dsw  libmpcdec.sln  libmpcdec.vcproj  sample.dsp  sample.dsw  sample.vcproj
Frameworks/musicbrainz/libmusicbrainz/: AUTHORS  AUTHORS.txt  ChangeLog  Doxyfile.cmake  INSTALL  INSTALL.txt  Makefile.am  Makefile.in  README  README.txt  README.win32  TODO  aclocal.m4  config.h  config.h.in  config_win32.h  configure  configure.in  libmusicbrainz.pc.in  mb_client.doxy  mb_client.spec
Frameworks/musicbrainz/libmusicbrainz/docs/: mb_howto.txt
Frameworks/musicbrainz/libmusicbrainz/examples/: Makefile.am  Makefile.in  README  cdlookup.c  cpp_example.cpp  findalbum.c  findartist.c  findtrack.c  getalbum.c  getartist.c  getartist.cpp  getartist_c.c  getrels.c  gettrack.c  gettrm.c  getuser.cpp  mp3info.c  submittrm.c
Frameworks/musicbrainz/libmusicbrainz/include/: Makefile.am  Makefile.in
Frameworks/musicbrainz/libmusicbrainz/lib/: Makefile.am  Makefile.in  apsmetadata.h  apsutility.h  audiosig.h  base64.c  base64.h  browser.c  c_wrapper.cpp  comhttpsocket.cpp  comhttpsocket.h  comsocket.cpp  comsocket.h  diskid.cpp  diskid.h  haar.cpp  haar.h  http.cpp  http.h  mb.cpp  mb.h  mp3.cpp  mp3.h  musicbrainz.cpp  rdfextract.cpp  rdfextract.h  rdfparse.c  rdfparse.h  sha1.c  sha1.h  sigclient.cpp  sigclient.h  sigcomplex.h  sigfft.cpp  sigfft.h  signature.cpp  sigxdr.cpp  sigxdr.h  trm.h  types.h  (+4 more)
Frameworks/musicbrainz/libmusicbrainz/osdep/: Makefile.am  Makefile.in  mb_beos.cpp  mb_beos.h  mb_cygwin.cpp  mb_cygwin.h  mb_darwin.cpp  mb_darwin.h  mb_freebsd.cpp  mb_freebsd.h  mb_irix.cpp  mb_irix.h  mb_linux.cpp  mb_linux.h  mb_netbsd.cpp  mb_netbsd.h  mb_openbsd.cpp  mb_openbsd.h  mb_os2.cpp  mb_os2.h  mb_qnx.cpp  mb_qnx.h  mb_solaris.cpp  mb_solaris.h  mb_win32.cpp  mb_win32.h
Frameworks/musicbrainz/libmusicbrainz/perl/: Makefile.am  Makefile.in
Frameworks/musicbrainz/libmusicbrainz/python/: Makefile.am  Makefile.in  README  musicbrainz.py  setup.py
Frameworks/musicbrainz/libmusicbrainz/src/: CMakeLists.txt  includes.cpp  label.cpp  mb_c.cpp  mbxmlparser.cpp  release.cpp  releaseevent.cpp  results.cpp  tag.cpp  track.cpp  utils.cpp  utils_private.cpp  utils_private.h  utils_releasetypenames.h  (+2 more)
Frameworks/musicbrainz3/libmusicbrainz/: CMakeLists.txt  NEWS.txt  config.h  config.h.cmake  libmusicbrainz3.pc.cmake
Frameworks/ofa1/libofa/: AUTHORS  COPYING  Makefile.am  Makefile.in  README  config.h  config.h.in  configure  configure.in  libofa.pc.in
(+3696 files in other folders)
