if DARWIN
else
noinst_LTLIBRARIES = libosdep.la

libosdep_la_SOURCES = 
libosdep_la_LIBADD = $(OSDEP_OBJS)
endif

EXTRA_DIST = \
  mb_beos.cpp mb_beos.h \
  mb_cygwin.cpp mb_cygwin.h \
  mb_darwin.cpp mb_darwin.h \
  mb_freebsd.cpp mb_freebsd.h \
  mb_irix.cpp mb_irix.h \
  mb_linux.cpp mb_linux.h \
  mb_netbsd.cpp mb_netbsd.h \
  mb_openbsd.cpp mb_openbsd.h \
  mb_os2.cpp mb_os2.h \
  mb_qnx.cpp mb_qnx.h \
  mb_solaris.cpp mb_solaris.h \
  mb_win32.cpp mb_win32.h
