SET(CMAKE_INCLUDE_CURRENT_DIR ON)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/.. ${CMAKE_CURRENT_SOURCE_DIR}/../include ${NEON_INCLUDE_DIR})

FILE(GLOB _sources ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/xmlParser/*.cpp)
ADD_LIBRARY(musicbrainz3 SHARED ${_sources})

IF(WIN32)
		TARGET_LINK_LIBRARIES(musicbrainz3 wsock32)
ENDIF(WIN32)
TARGET_LINK_LIBRARIES(musicbrainz3 ${NEON_LIBRARIES})
SET_TARGET_PROPERTIES(musicbrainz3 PROPERTIES
    VERSION ${musicbrainz3_VERSION}
    SOVERSION ${musicbrainz3_SOVERSION}
    DEFINE_SYMBOL MB_API_EXPORTS
)

IF(DISCID_FOUND)
    INCLUDE_DIRECTORIES(${DISCID_INCLUDE_DIR})
    TARGET_LINK_LIBRARIES(musicbrainz3 ${DISCID_LIBRARIES})
ENDIF(DISCID_FOUND)

INSTALL(TARGETS musicbrainz3 DESTINATION ${LIB_INSTALL_DIR})
