SET(CMAKE_INCLUDE_CURRENT_DIR ON)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/.. ${CMAKE_CURRENT_SOURCE_DIR}/../include ${CPPUNIT_INCLUDE_DIR})
FILE(GLOB _sources ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
ADD_EXECUTABLE(test_runner ${_sources})
TARGET_LINK_LIBRARIES(test_runner musicbrainz3 ${NEON_LIBRARIES} ${CPPUNIT_LIBRARIES})

ADD_CUSTOM_TARGET(check
    ./test_runner
    DEPENDS test_runner
)
