## $Id: Makefile.am,v 1.4 2002/10/15 09:54:04 aleidinger Exp $

AUTOMAKE_OPTIONS = foreign ansi2knr

docdir = $(datadir)/doc
pkgdocdir = $(docdir)/$(PACKAGE)
htmldir = $(docdir)/html
pkghtmldir = $(pkgdocdir)/html

pkghtml_DATA = \
        basic.html \
	contributors.html \
	examples.html \
	history.html \
	id3.html \
	index.html \
	lame.css \
	modes.html \
	node6.html \
	presets.html \
	switchs.html

EXTRA_DIST = $(pkghtml_DATA)

