# ------------------------------------------------------------------
#
#   libofa -- the Open Fingerprint Architecture library
#
#   Copyright (C) 2006 MusicIP Corporation
#   All rights reserved.
#
#-------------------------------------------------------------------
AUTOMAKE_OPTIONS = foreign

ofa_incdir = $(includedir)/ofa1
ofa_inc_HEADERS = ofa.h
