# ------------------------------------------------------------------
#
#   libofa -- the Open Fingerprint Architecture library
#
#   Copyright (C) 2006 MusicIP Corporation
#   All rights reserved.
#
#-------------------------------------------------------------------
noinst_LTLIBRARIES = libaflib.la
libaflib_la_SOURCES = aflibConverter.cpp aflibConverter.h aflibConverterLargeFilter.h aflibConverterSmallFilter.h

#EXTRA_DIST = aflibConverter.h aflibConverterLargeFilter.h aflibConverterSmallFilter.h
